# morchaos

./: .gitignore  DEV_STATUS.md  IMPLEMENTATION_COMPLETE.md  LICENSE  README.md  prompt_file_map.json  pyproject.toml
.github/workflows/: ci.yml
docsbot_prompts/: prompts_analysis_problem-decomposer.json  prompts_business_ai-agency-automation-planner.json  prompts_business_ai-agents-rapid-development-plan.json  prompts_business_ai-automation-agency-builder.json  prompts_business_ai-automation-agency-business-plan.json  prompts_business_ai-automation-business-ideas.json  prompts_business_ai-automation-consultant.json  prompts_business_ai-automation-niche-analysis.json  prompts_business_ai-automation-niche-finder-1.json  prompts_business_ai-automation-passive-income.json  prompts_business_ai-email-response-generator-1.json  prompts_business_ai-freelance-writing-agent.json  prompts_business_ai-inbound-calling-agent.json  prompts_business_ai-income-generation-plan.json  prompts_business_ai-income-generation.json  prompts_business_ai-marketing-agency-architect.json  prompts_business_ai-platform-product-development-plan.json  prompts_business_career-resume-strategy-expert.json  prompts_business_ceo-role-explanation.json  prompts_business_cfo-role-explanation.json  prompts_business_chief-marketing-officer.json  prompts_business_chief-operating-officer-role.json  prompts_business_chief-technology-officer.json  prompts_business_elite-strategic-consultant-arabic.json  prompts_business_executive-assistant.json  prompts_business_finance-manager.json  prompts_business_human-resources-manager.json  prompts_business_marketing-manager-role.json  prompts_business_president-role-explanation.json  prompts_business_product-manager-analysis.json  prompts_business_project-manager-assistant-1.json  prompts_business_resume-strategist.json  prompts_business_senior-uxui-design-expert-description.json  prompts_business_senior-uxui-design-expert-profile.json  prompts_business_strategic-product-manager.json  prompts_business_uiux-designer-assistant.json  prompts_business_vice-president-guidance.json  prompts_business_workflow-quality-root-cause-analysis.json  prompts_creative_1-minute-story-creator-1.json  prompts_creative_1-minute-story-creator-2.json  (+66 more)
morchaos/cli/: archive_org.py  ascii_art.py  duplicate.py  ebook_catalog.py  email_bot.py  geocode.py  image_diff.py  ollama_chat.py  prompt_manager.py  source_diff.py  system_info.py  xkcd.py  youtube.py
morchaos/core/: ascii_art.py  config.py  ebook.py  logging.py  ollama_chat.py  prompt_manager.py  slug.py  utils.py
morchaos/downloader/: __init__.py  archive_org.py  image.py  web.py  website.py  xkcd.py  youtube.py
morchaos/email/: __init__.py  bot.py  imap.py  smtp.py  template.py
morchaos/filemanager/: __init__.py  create.py  duplicate.py  move.py  zip.py
morchaos/geocode/: __init__.py  geopy.py
morchaos/logger/: __init__.py
morchaos/media/: __init__.py  base64.py  image.py
specifications/: requirements_specification.md  source_code.md  system_design.md
tests/: conftest.py  test_ascii_art.py  test_chatbot.py  test_duplicate.py  test_file_utils.py  test_ollama_chat.py  test_prompt_manager.py  test_prompt_manager_mapper.py  test_source.py  test_system.py
